--- a/styles/style.css
+++ b/styles/style.css
@@ -303,7 +303,8 @@ img {
   padding: 30px 0;
   margin: 0 50px;
 }
-.header-main .wrapper .header-text-container, .header-main .wrapper .header-image-container {
+.header-main .wrapper .header-text-container,
+.header-main .wrapper .header-image-container {
   width: 50%;
   padding: 0 20px;
   margin-top: 3%;
@@ -353,4 +354,69 @@ img {
 
 .header-image-container {
   margin-right: 30px;
+}
+
+.about {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.about .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 30px 0;
+}
+.about .wrapper .about-text-container,
+.about .wrapper .about-motto-container {
+  width: 50%;
+  padding: 0 auto;
+}
+
+.about-text-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+  padding-right: 35px;
+}
+.about-text-container h3, .about-text-container h1 {
+  font-family: "Lora", Arial, serif;
+}
+.about-text-container h1 {
+  margin: 2px 0;
+}
+.about-text-container p {
+  margin: 10px 0;
+}
+
+.about-text-button {
+  background: #207200;
+  margin: 15px 0;
+  border: none;
+  border-radius: 20cm;
+  padding: 5px 0;
+}
+.about-text-button a {
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 600;
+  padding: 0 15px;
+  margin: 10px 0;
+}
+
+.about-motto-container {
+  margin-left: 10px;
+}
+.about-motto-container p {
+  border: 0.5cm solid rgb(95, 179, 95);
+  border-radius: 40px;
+  padding: 50px 70px 50px 30px;
 }
