--- a/styles/sass/partials/_body.scss
+++ b/styles/sass/partials/_body.scss
@@ -61,9 +61,17 @@
     margin-left: 10px;
     // margin-top: 50px;
 
-    p {
-        border: 0.5cm solid rgb(95, 179, 95);
+    .shape {
+        height: 150px;
+        width: 350px;
         border-radius: 40px;
+        background-color: var.$lightgreen;
+    }
+
+    p { 
         padding: 50px 70px 50px 30px;
+        color: var.$white;
+        font-family: var.$FontStack;
+        line-height: 1.5;
     }
 }
