Finished stylying home page: product section.

--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,4 +1,5 @@
 @use "./partials/setup";
 @use "./partials/variables";
 @use "./partials/header";
-@use "./partials/body";
+@use "./partials/home-about";
+@use "./partials/home-product";
