--- a/styles/sass/partials/_home-product.scss
+++ b/styles/sass/partials/_home-product.scss
@@ -1,6 +1,6 @@
 @use "./variables" as var;
 
-// PRODUCT SECTION
+// PRODUCT TITLE SECTION
     
 .products-head-container {
     text-align: center;
@@ -17,6 +17,8 @@
     }
 
 }
+
+// PRODUCT CARD SECTION
   
 .product-list .wrapper {
     display: flex;
@@ -31,12 +33,11 @@
     }
 }
 
-    // .product-image img {
-    //     // max-width: 100%;
-    //     padding: 8px;
-    //     width: 25px;
-    //     height: auto;
-    // }
+    .product-image img {
+        max-width: 100%;
+    }
+
+// PRODUCT INFO SECTION
 
 .product-info {
     border: 0.5px solid rgba(207, 205, 205, 0.314);
@@ -52,6 +53,8 @@
     }
 }
 
+// PRODUCT PRICE SECTION
+
 .price {
     color: var.$green;
     font-weight: 600;
@@ -60,6 +63,8 @@
         text-decoration: line-through 1px;
     }
 }
+
+// PRODUCT BUTTON SECTION
 
 .product-card button {
     background: var.$green;
