--- a/styles/style.css
+++ b/styles/style.css
@@ -396,14 +396,14 @@ img {
   margin: 10px 0;
 }
 
-.about-text-button {
+.uppercase-button {
   background: #207200;
   margin: 15px 0;
   border: none;
   border-radius: 20cm;
   padding: 5px 0;
 }
-.about-text-button a {
+.uppercase-button a {
   color: #fff;
   text-decoration: none;
   text-transform: uppercase;
@@ -458,6 +458,10 @@ img {
           flex-grow: 1;
   -ms-flex-preferred-size: 25%;
       flex-basis: 25%;
+}
+
+.product-image img {
+  max-width: 100%;
 }
 
 .product-info {
@@ -515,4 +519,41 @@ img {
   font-weight: 600;
   padding: 0 15px;
   margin: 10px 0;
+}
+
+.gallery-text-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 50px;
+}
+.gallery-text-container h2 {
+  font-family: "Lora", Arial, serif;
+  text-transform: uppercase;
+}
+.gallery-text-container p {
+  padding: 0 200px;
+  text-align: center;
+}
+.gallery-text-container ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+.gallery-text-container ul li {
+  margin: 20px;
 }
