--- a/styles/sass/partials/_home-product.scss
+++ b/styles/sass/partials/_home-product.scss
@@ -5,6 +5,7 @@
 .products-head-container {
     text-align: center;
     padding: 0 100px;
+    margin-top: 80px;
 
     h2 {
         font-family: var.$FontStack;
