--- a/styles/sass/partials/_home-gallery.scss
+++ b/styles/sass/partials/_home-gallery.scss
@@ -1,5 +1,16 @@
 @use "./variables" as var;
 
+// GALLERY BACKGROUND
+
+.gallery {
+    background-image: url(./../assets/assets/grass.jpg);
+    background-size: contain;
+    background-position: bottom;
+    background-repeat: no-repeat;
+    padding-bottom: 50px;
+}
+
+
 // GALLERY TITLE
 
 .gallery-text-container {
@@ -7,7 +18,7 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    margin-top: 80px;
+    margin-top: 5rem;
 
     h2 {
         font-family: var.$FontStack;
@@ -31,7 +42,7 @@
 
 // GALLERY BUTTON 
 
-.gallery-buttons button {
+.gallery-buttons button{
     background: var.$green;
     border: none;
     border-radius: 20cm;
@@ -43,5 +54,34 @@
         padding: 0 15px;
         margin: 10px 0;
     }
+}
+
+// *loadmore button in _product.scss*
+
+
+
+// Gallery
+
+.image-gallery-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+
+    li {
+        flex: 1 1 25%;
+
+        img {
+            // object-fit: cover;
+            width: 100%;
+            height: 100%;
+            // vertical-align: middle;
+        } 
+    }
+
+    .larger-image {
+        flex-basis: 40%;
+        height: auto;
+    }
+    
 }
 
