--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -5,14 +5,14 @@
 .header-top {
     display: flex;
     margin: 5px auto;
-    height: 10vh;
+    // height: 10vh;
 
     .wrapper {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
         align-content: center;
-        margin-top: 10px;
+        // margin-top: 10px;
     }
 }
 
@@ -41,13 +41,14 @@
     height: 100vh;
     background-size: cover;
     background-position: center;
-    margin-top: 10px;
+    // margin-top: 10px;
 }
 
 .header-main .wrapper {
     display: flex;
-    padding: 30px 0;
-    margin: 0 50px;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
 
 
     .header-text-container, 
