--- a/styles/style.css
+++ b/styles/style.css
@@ -255,7 +255,6 @@ img {
   display: -ms-flexbox;
   display: flex;
   margin: 5px auto;
-  height: 10vh;
 }
 .header-top .wrapper {
   display: -webkit-box;
@@ -270,7 +269,6 @@ img {
           justify-content: space-between;
   -ms-flex-line-pack: center;
       align-content: center;
-  margin-top: 10px;
 }
 
 .header-logo img {
@@ -293,15 +291,19 @@ img {
   height: 100vh;
   background-size: cover;
   background-position: center;
-  margin-top: 10px;
 }
 
 .header-main .wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding: 30px 0;
-  margin: 0 50px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 80vh;
 }
 .header-main .wrapper .header-text-container,
 .header-main .wrapper .header-image-container {
@@ -360,6 +362,7 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin-top: 30px;
 }
 .about .wrapper {
   display: -webkit-box;
@@ -413,7 +416,14 @@ img {
 }
 
 .about-motto-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   margin-left: 10px;
+  margin-top: 20px;
 }
 .about-motto-container .shape {
   height: 150px;
@@ -422,7 +432,7 @@ img {
   background-color: #5fb35f;
 }
 .about-motto-container p {
-  padding: 50px 70px 50px 30px;
+  padding: 2rem 70px 2rem 30px;
   color: #fff;
   font-family: "Lora", Arial, serif;
   line-height: 1.5;
