Finished styling home page: news section.

--- a/styles/sass/partials/_home-product.scss
+++ b/styles/sass/partials/_home-product.scss
@@ -2,7 +2,7 @@
 
 // PRODUCT TITLE SECTION
     
-.products-head-container {
+.section-head-container {
     text-align: center;
     padding: 0 100px;
     margin-top: 80px;
