--- a/styles/sass/partials/_home-product.scss
+++ b/styles/sass/partials/_home-product.scss
@@ -29,8 +29,7 @@
 
     .product-card {
         padding: 1.5%;
-        flex-grow: 1;
-        flex-basis: 25%;
+        flex: 1 1 25%;
     }
 }
 
