--- a/styles/style.css
+++ b/styles/style.css
@@ -494,10 +494,8 @@ img {
 .product-list .wrapper .product-card {
   padding: 1.5%;
   -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-  -ms-flex-preferred-size: 25%;
-      flex-basis: 25%;
+      -ms-flex: 1 1 25%;
+          flex: 1 1 25%;
 }
 
 .product-image img {
@@ -693,4 +691,126 @@ img {
   font-size: 12px;
   font-weight: 600;
   text-transform: capitalize;
+}
+
+.footer .wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 20px;
+}
+.footer .wrapper .footer-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.footer .wrapper .footer-column {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 25%;
+          flex: 1 1 25%;
+  padding: 1.5%;
+}
+
+footer h2,
+footer h4 {
+  font-family: "Lora", Arial, serif;
+  font-weight: 600;
+}
+
+.brand p {
+  line-height: 2;
+}
+
+.social-media {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.social-media .fa {
+  padding: 10px;
+  font-size: 20px;
+  width: 42px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+  border-radius: 50%;
+  background: #207200;
+  color: #fff;
+}
+
+.links h3 {
+  margin-bottom: 30px;
+}
+.links p {
+  padding: 2px 0;
+}
+.links p a {
+  text-decoration: none;
+  color: #1A2428;
+}
+
+.footer-product-card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+.footer-product-card .footer-product-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.footer-product-card .footer-product-info h4 {
+  margin: 10px 0;
+}
+.footer-product-card .footer-product-info .price-before {
+  color: #207200;
+  font-weight: 600;
+}
+
+.footer-product-card img {
+  width: 7vw;
+  margin: 5px;
+}
+
+.info-type {
+  font-weight: 600;
+  margin-top: 30px;
+}
+
+.info form input {
+  padding: 5px 15px;
+}
+
+.footer {
+  background: url(./../assets/assets/cow.png);
+  background-repeat: no-repeat;
+  background-position: bottom;
+  background-size: contain;
+  padding-bottom: 1px;
+}
+
+.footer-copyright {
+  text-align: center;
+}
+.footer-copyright p {
+  color: #fff;
+  margin: 25px 0 10px;
 }
