--- a/styles/sass/partials/_footer.scss
+++ b/styles/sass/partials/_footer.scss
@@ -26,6 +26,14 @@ footer h4 {
     font-weight: 600;
 } 
 
+footer h2 {
+    font-size: 20px;
+}
+
+footer h4 {
+    font-size: 12px;
+}
+
 // FOOTER COLUMN - BRAND
 
 .brand p {
@@ -97,7 +105,7 @@ footer h4 {
 
 .info-type {
     font-weight: 600;
-    margin-top: 30px;
+    margin-top: 7%;
 }
 
 .info {
@@ -129,6 +137,50 @@ footer h4 {
     p {
         color: var.$white;
         margin: 25px 0 10px;
-        // padding: 45px 20px 10px;
+        font-size: 10px;
     }
+}
+
+// RESPONSIVE DESIGN
+
+@media (max-width: 768px) {
+
+    .footer-row {
+        flex-wrap: wrap;
+    }
+
+    .footer-column {
+        margin: 2%;
+    }
+
+    .links {
+        display: none;
+    } 
+
+    .footer-products {
+        display: none;
+    }
+    
+}
+
+@media (max-width: 500px) {
+    
+    .footer {
+        background-size: auto;
+    }
+
+    .footer-row {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .footer-column {
+        width: 80%;
+        text-align: center;
+    }
+
+    .social-media {
+        justify-content: space-evenly;
+    }
+    
 }
