--- a/styles/sass/partials/_home-gallery.scss
+++ b/styles/sass/partials/_home-gallery.scss
@@ -26,16 +26,19 @@
     }
 
     p {
-        padding: 0 200px;
+        padding: 0 20%;
         text-align: center;
     }
     
     ul {
         display: flex;
         flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
+        width: 100%;
 
         li {
-            margin: 20px;
+            margin: 2%;
         }    
     }
 }
@@ -84,3 +87,23 @@
     
 }
 
+// RESPONSIVE DESIGN
+
+@media (max-width: 768px) {
+
+    .image-gallery-container li {
+        min-width: 45%;
+    }
+
+}
+
+@media (max-width: 500px) {
+
+    .gallery-text-container p {
+        padding: 0;
+    }
+
+    .image-gallery-container li {
+        min-width: 50%;
+    }
+}
