--- a/styles/style.css
+++ b/styles/style.css
@@ -387,6 +387,35 @@ img {
   text-align: center;
 }
 
+@media (max-width: 768px) {
+  .header-main {
+    height: 80vh;
+  }
+  .header-main .wrapper {
+    height: 70vh;
+  }
+  .header-main .wrapper .header-text-container,
+  .header-main .wrapper .header-image-container {
+    padding: 0;
+    margin-top: 0;
+  }
+  .header-text-container h1 {
+    font-size: 2rem;
+  }
+}
+@media (max-width: 600px) {
+  .header-image-container {
+    display: none;
+  }
+  .header-main .wrapper .header-text-container {
+    width: 80%;
+  }
+}
+@media (max-width: 500px) {
+  .header-nav li a {
+    padding: 0 7px;
+  }
+}
 .about {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -421,8 +450,12 @@ img {
 .about-text-container h3, .about-text-container h1 {
   font-family: "Lora", Arial, serif;
 }
+.about-text-container h3 {
+  font-size: 1rem;
+}
 .about-text-container h1 {
   margin: 2px 0;
+  font-size: 1.5rem;
 }
 .about-text-container p {
   margin: 10px 0;
@@ -467,6 +500,50 @@ img {
   line-height: 1.5;
 }
 
+@media (max-width: 768px) {
+  .about .wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 20px 0;
+  }
+  .about .wrapper .about-text-container {
+    width: 70vw;
+    text-align: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-right: 0;
+  }
+  .about .wrapper .about-text-container .about-button {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 100%;
+  }
+  .about .wrapper .about-motto-container {
+    width: 70vw;
+    margin-bottom: 5%;
+  }
+  .about .wrapper .about-motto-container .shape {
+    border-radius: 10px;
+    padding: 2%;
+    height: 100%;
+    width: 100%;
+  }
+  .about .wrapper .about-motto-container .shape p {
+    padding: 0;
+    margin: 5%;
+    text-align: center;
+  }
+}
 .section-head-container {
   text-align: center;
   padding: 0 100px;
@@ -559,6 +636,22 @@ img {
   margin: 10px 0;
 }
 
+@media (max-width: 768px) {
+  .section-head-container {
+    padding: 0;
+  }
+  .product-list .wrapper .product-card {
+    min-width: 200px;
+    margin: 2%;
+    -ms-flex-preferred-size: 40%;
+        flex-basis: 40%;
+  }
+}
+@media (max-width: 500px) {
+  .section-head-container p {
+    padding: 0;
+  }
+}
 .gallery {
   background-image: url(./../assets/assets/grass.jpg);
   background-size: contain;
@@ -588,7 +681,7 @@ img {
   text-transform: uppercase;
 }
 .gallery-text-container p {
-  padding: 0 200px;
+  padding: 0 20%;
   text-align: center;
 }
 .gallery-text-container ul {
@@ -599,9 +692,15 @@ img {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 100%;
 }
 .gallery-text-container ul li {
-  margin: 20px;
+  margin: 2%;
 }
 
 .gallery-buttons button {
@@ -640,6 +739,19 @@ img {
   height: auto;
 }
 
+@media (max-width: 768px) {
+  .image-gallery-container li {
+    min-width: 45%;
+  }
+}
+@media (max-width: 500px) {
+  .gallery-text-container p {
+    padding: 0;
+  }
+  .image-gallery-container li {
+    min-width: 50%;
+  }
+}
 .news {
   background: #207200;
   padding-bottom: 50px;
@@ -664,7 +776,7 @@ img {
 }
 .news-container .blog {
   background-color: #fff;
-  padding: 15px;
+  padding: 2%;
   margin: 0 10px;
   border-radius: 0.1cm;
 }
@@ -693,6 +805,19 @@ img {
   text-transform: capitalize;
 }
 
+@media (max-width: 768px) {
+  .news-container {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .news-container .blog {
+    margin: 5% 15%;
+    min-width: 70vw;
+  }
+}
 .form-row {
   margin: 10% 0;
   display: -webkit-box;
@@ -704,9 +829,8 @@ img {
 }
 .form-row .form-column {
   -webkit-box-flex: 1;
-      -ms-flex: 1 1 50%;
-          flex: 1 1 50%;
-  margin: 20px 2%;
+      -ms-flex: 1 1 40%;
+          flex: 1 1 40%;
 }
 
 .form-info {
@@ -715,6 +839,7 @@ img {
   border-left: 7px solid #207200;
   -webkit-box-shadow: 7px 10px 10px 1px rgba(0, 0, 0, 0.1);
           box-shadow: 7px 10px 10px 1px rgba(0, 0, 0, 0.1);
+  min-width: 20vw;
 }
 .form-info h3 {
   font-family: "Lora", Arial, serif;
@@ -764,6 +889,30 @@ form button {
   font-weight: 500;
 }
 
+@media (max-width: 940px) {
+  .form-row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .form-row .form-column {
+    margin: 5% 6%;
+  }
+}
+@media (max-width: 768px) {
+  .form-column form {
+    min-width: 470px;
+  }
+}
+@media (max-width: 500px) {
+  .form-column form {
+    min-width: 470px;
+  }
+}
 .footer .wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -793,6 +942,14 @@ footer h2,
 footer h4 {
   font-family: "Lora", Arial, serif;
   font-weight: 600;
+}
+
+footer h2 {
+  font-size: 20px;
+}
+
+footer h4 {
+  font-size: 12px;
 }
 
 .brand p {
@@ -863,7 +1020,7 @@ footer h4 {
 
 .info-type {
   font-weight: 600;
-  margin-top: 30px;
+  margin-top: 7%;
 }
 
 .info form input {
@@ -884,4 +1041,44 @@ footer h4 {
 .footer-copyright p {
   color: #fff;
   margin: 25px 0 10px;
+  font-size: 10px;
+}
+
+@media (max-width: 768px) {
+  .footer-row {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .footer-column {
+    margin: 2%;
+  }
+  .links {
+    display: none;
+  }
+  .footer-products {
+    display: none;
+  }
+}
+@media (max-width: 500px) {
+  .footer {
+    background-size: auto;
+  }
+  .footer-row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .footer-column {
+    width: 80%;
+    text-align: center;
+  }
+  .social-media {
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
 }
