Added JS for hamburger menu and styling.

--- a/styles/sass/partials/_header.scss
+++ b/styles/sass/partials/_header.scss
@@ -174,3 +174,46 @@
         padding: 0 7px;
     }
 }
+
+// Hamburger menu 
+
+nav .open-menu {
+    font-size: 2rem;
+    margin: 20px;
+    display: none;
+    cursor: pointer;
+}
+
+nav .main-menu .close-menu {
+    font-size: 2rem;
+    display: none;
+    cursor: pointer;
+}
+
+@media (max-width: 500px) {
+    nav .main-menu {
+        height: 50vh;
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 0;
+        z-index: 10;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        transition: top 1s ease;
+        background: var.$white;
+        display: none;
+    }
+
+    nav .main-menu .close-menu {
+        display: block;
+        position: absolute;
+        top: 20px;
+        right: 20px;
+    }
+
+    nav .open-menu {
+        display: block;
+    }
+}
